# a2a-poc

./: .gitignore  ARCHITECTURE.md  COOKBOOK.md  HYBRID_SUCCESS.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  pages.yml
agents/: __init__.py  data_analyst_agent.py  math_agent.py
common/: __init__.py  a2a_protocol.py  base_agent.py
config/: __init__.py  settings.ini
docs/: index.html  robots.txt  sitemap.xml  technical-architecture.html
examples/: README_HYBRID.md  __init__.py  hybrid_autogen_a2a.py  orchestrator.py  setup_autogen.py  simple_a2a_client.py  simple_hybrid_demo.py
scripts/: __init__.py  launch_system.py  run_demo.py  smoke_test.py  start_data_agent.py  start_math_agent.py
tests/: __init__.py  conftest.py  test_base_agent.py  test_base_agent_errors.py  test_config.py  test_data_analyst_agent.py  test_data_analyst_extended.py  test_integration_http.py  test_math_agent.py  test_math_agent_extended.py  test_orchestrator.py  test_orchestrator_extended.py  test_protocol.py  test_simple_client_and_hybrid.py  test_system.py
